fix: remove the visibility of the captcha button

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -17,3 +17,7 @@
   transform: scale(1.05);
   transition: transform 0.5s ease-in-out;
 }
+
+.grecaptcha-badge { 
+  visibility: hidden !important;
+}
